--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.crowvalley</groupId>
-    <artifactId>tawelib2</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>tawelib</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
