--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <postgres.version>42.2.9</postgres.version>
         <slf4j.version>1.7.28</slf4j.version>
         <spring.version>5.2.5.RELEASE</spring.version>
+        <testfx.version>4.0.15-alpha</testfx.version>
     </properties>
 
     <dependencies>
@@ -112,8 +113,6 @@
             <scope>test</scope>
         </dependency>
 
-
-
         <!-- TESTING -->
         <dependency>
             <groupId>junit</groupId>
@@ -131,6 +130,18 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+            <version>${testfx.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit</artifactId>
+            <version>${testfx.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
