--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,14 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>13</source>
+                    <target>13</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
@@ -36,7 +41,7 @@
         <commons-lang3.version>3.9</commons-lang3.version>
         <guava.version>28.2-jre</guava.version>
         <hibernate.version>5.4.13.Final</hibernate.version>
-        <javafx.version>11.0.2</javafx.version>
+        <javafx.version>13.0.2</javafx.version>
         <junit.version>4.12</junit.version>
         <mockito.version>1.10.19</mockito.version>
         <postgres.version>42.2.9</postgres.version>
